--- a/css/generator.css
+++ b/css/generator.css
@@ -1,5 +1,13 @@
 #sidebar
 {
 	width: 200px;
-	float: left;
+	display: inline-block;
+	vertical-align: top;
+	margin-top: -20px;
+}
+
+#maincontent
+{
+	width: 75%;
+	display: inline-block;
 }
