Link ke Unggah Dokumen

--- a/css/generator.css
+++ b/css/generator.css
@@ -57,3 +57,14 @@ li
 {
 	color:#A0A0A0;
 }
+
+.unggah
+{
+	border-top:1px solid black;
+	background-color:lightblue;
+}
+
+.unggah:hover
+{
+	background-color:#E5FFCC;
+}
