Edit menuportlet, sitecontroller, generator, checkpoint3

--- a/css/generator.css
+++ b/css/generator.css
@@ -68,3 +68,13 @@ li
 {
 	background-color:#E5FFCC;
 }
+
+.lihat
+{
+	background-color:lightblue;
+}
+
+.lihat:hover
+{
+	background-color:#E5FFCC;
+}
