--- a/css/generator.css
+++ b/css/generator.css
@@ -8,8 +8,10 @@
 
 #maincontent
 {
-	width: 75%;
+	width: 70%;
 	display: inline-block;
+	border:1px solid lightgrey;
+	padding:10px;
 }
 
 #sidebar a
