--- a/css/generator.css
+++ b/css/generator.css
@@ -88,7 +88,7 @@ li
 
 #menuform
 {
-	background:white url(bg.gif) repeat-x left top;
+	background:lightgrey;
 }
 
 #menuform ul
@@ -104,7 +104,7 @@ li
 
 #menuform ul li a
 {
-	color:#ffffff;
+	color:#000000;
 	background-color:transparent;
 	font-size:12px;
 	font-weight:bold;
@@ -114,7 +114,12 @@ li
 
 #menuform ul li a:hover, #menuform ul li.active a
 {
-	color: #6399cd;
+	color: #000000;
 	background-color:#EFF4FA;
 	text-decoration:none;
+}
+
+#menuform ul li span
+{
+	color:#000000;
 }
